# homeserver-agent

./: .gitignore  README.md  agent.py  dump.rdb  main.py  pyproject.toml  ruff.toml
app/: chat_service.py  config.py  schemas.py
app/integrations/listenbrainz/: __init__.py  client.py  models.py
app/integrations/listenbrainz/tools/: __init__.py  listenbrainz_artist_top_songs.py  musicbrainz_release_details.py  musizbrains_metadata_lookup.py
app/integrations/tautulli/: client.py  models.py
app/integrations/tautulli/tools/: __init__.py  current_activity.py
